Fixed TextWrapping

--- a/src/App.css
+++ b/src/App.css
@@ -113,6 +113,7 @@
     font-size: 16px;
     line-height: 1.5em;
     overflow-y: auto;
+    text-wrap: nowrap;
 }
 
 .starter-screen {
